// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inferred parser automatically formats Terraform 1`] = `
"
module "some_module" {
  var1 = 3
  var2 = 4
  var3 = 5
}
"
`;

exports[`inferred parser when no Terraform exists on path, fails to format and returns original text 1`] = `
"
module "some_module" {
  var1 = 3
  var2         = 4
  var3  =5
}
"
`;
